--- a/public/css/app.css
+++ b/public/css/app.css
@@ -91,6 +91,8 @@ h3,
 h4,
 h5,
 h6 {
+  font-weight:bold;
+  font-size: 2rem;
   margin-top: 0;
   margin-bottom: 0.5rem;
 }
@@ -395,6 +397,7 @@ h1,
 h2,
 .h2 {
   font-size: 1.8rem;
+  font-weight: 700;
 }
 
 h3,
@@ -4535,6 +4538,9 @@ input[type=button].btn-block {
   align-items: center;
   justify-content: space-between;
   padding: 0.5rem 1rem;
+  font-size: 0.9375rem;
+  font:sans-serif;
+  text-transform: uppercase;
 }
 
 .navbar .container,
