--- a/public/css/style.css
+++ b/public/css/style.css
@@ -375,6 +375,19 @@ body a:hover {
     padding: 25px 0;
 }
 
+.navbar-nav #btn-organizer {
+    margin-top: 12px;
+    margin-left: 4px;
+}
+
+.mego-text-hover i {
+    color: black;
+}
+
+.mego-text-hover i:hover {
+    color: #9b9b9b;
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     /* #account-navbar .nav-link {
