--- a/public/css/style.css
+++ b/public/css/style.css
@@ -388,6 +388,10 @@ body a:hover {
     color: #9b9b9b;
 }
 
+.event-single-page .btn-danger {
+    border-radius: 4px;
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     /* #account-navbar .nav-link {
@@ -430,6 +434,13 @@ body a:hover {
         border-bottom: none;
         z-index: 1111;
     }
+
+    .event-single-header {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 100%;
+    }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -458,6 +469,21 @@ body a:hover {
     .navbar-brand .logo {
         max-width: 200px;
         width: 100%;
+    }
+
+    .event-single-header {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+    }
+
+    .event-single-header-left {
+        width: 900px !important;
+    }
+
+    .event-single-header-right {
+        flex: 1;
     }
 }
 
