--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -2,3 +2,59 @@
     width: 40px !important;
     text-align: left !important;
 }
+
+.mego-image-upload-preview-wrapper {
+    position: relative;
+    height: auto;
+    max-width: 100%;
+    overflow: hidden;
+    transition: all .2s ease;
+}
+
+.mego-image-upload-preview-wrapper img {
+    height: auto;
+    max-width: 100%;
+}
+
+.mego-image-upload-preview-wrapper:hover {
+    cursor: pointer;
+}
+
+.mego-image-upload-preview-wrapper:hover #preview-logo-pic {
+    opacity: .5;
+}
+
+.mego-image-upload-preview-wrapper #preview-logo-pic {
+    height: 100%;
+    width: 100%;
+    transition: all .3s ease;
+}
+
+.mego-image-upload-preview-wrapper #preview-logo-pic:after {
+    font-family: FontAwesome;
+    content: "\f007";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    font-size: 300px;
+    background: #ecf0f1;
+    color: #34495e;
+    text-align: center;
+}
+
+.mego-image-upload-preview-wrapper .logo-upload-button {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+}
+
+.mego-datatable-image {
+    max-height: 100px;
+    max-width: 300px;
+    height: auto;
+    width: auto;
+}
