--- a/public/css/style.css
+++ b/public/css/style.css
@@ -391,6 +391,65 @@ body a:hover {
 .event-single-page .btn-danger {
     border-radius: 4px;
 }
+/* slider */
+.home_slider_fullscreen_content{
+    background-color: #02020242;
+    margin-left: 60px;
+}
+.home_slider_fullscreen_content h1,h3 {
+    width: 40vw;
+    margin-left: 60px;
+    padding: 15px;
+    color: white;
+   
+}
+
+.home_slider_fullscreen .slick-prev {
+    margin-left: 40px !important;
+    
+    z-index: 1;
+}
+
+.home_slider_fullscreen .slick-next {
+    margin-right: 50px !important;
+}
+
+.home_slider_carousel .slick-prev {
+    margin-left: 50px !important;
+    ;
+    z-index: 1;
+}
+
+.home_slider_carousel .slick-next {
+    margin-right: 50px !important;
+}
+.slick-lightbox-slick-item-inner,
+.slick-lightbox-slick-img {
+    max-height: auto !important;
+}
+
+.fullscreen_slider_image {
+    height: auto;
+    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.home_slider_carousel_item {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.home_slider_fullscreen .slick-prev:before,
+.home_slider_fullscreen .slick-next:before {
+    font-size: 30px;
+}
+
+.home_slider_carousel .slick-prev:before,
+.home_slider_carousel .slick-next:before {
+    font-size: 25px;
+    color: black;
+}
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
@@ -441,6 +500,44 @@ body a:hover {
         justify-content: space-between;
         width: 100%;
     }
+    /* slider */
+    .home_slider_fullscreen_content h1 {
+        font-size: 6vw;
+        margin-top: -30px;
+    }
+
+    .home_slider_carousel_item {
+        height: 80px !important;
+        width: auto !important;
+    }
+
+    #home_slider_carousel {
+        margin-top: 10px;
+    }
+
+    .home_slider_fullscreen_content {
+        position: absolute;
+        top: 10px;
+    }
+
+    .fullscreen_slider_image {
+        max-height: 320px;
+        max-width: auto;
+    }
+
+    .home_slider_fullscreen .slick-prev {
+        margin-left: 50px !important;
+        ;
+        z-index: 1;
+    }
+
+    .home_slider_fullscreen .slick-next {
+        margin-right: 50px !important;
+    }
+
+    .slider-subtitle {
+        display: none;
+    }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -448,6 +545,29 @@ body a:hover {
     .navbar-brand .logo {
         max-width: 170px;
         width: 100%;
+    }
+    /* slider */
+    .home_slider_carousel_item {
+        height: 80px !important;
+        width: auto !important;
+    }
+
+    #home_slider_carousel {
+        margin-top: 0;
+    }
+
+    .home_slider_fullscreen_content {
+        position: absolute;
+        top: 10px;
+    }
+
+    .fullscreen_slider_image {
+        min-height: 320px;
+        min-width: auto;
+    }
+
+    .slider-subtitle {
+        display: none;
     }
 }
 
@@ -461,6 +581,35 @@ body a:hover {
     #account-navbar #account-link {
         position: relative;
         display: flex;
+    }
+    /* slider */
+    .home_slider_carousel_item {
+        height: 200px !important;
+        width: auto !important;
+    }
+
+    #home_slider_carousel {
+        margin-top: -20px;
+    }
+
+    .home_slider_fullscreen_content {
+        position: absolute;
+        top: 30px;
+    }
+
+    .fullscreen_slider_image {
+        max-width: 100%;
+        max-height: 400px;
+
+    }
+
+    .slickLightbox img {
+        max-width: 200px;
+        max-height: 310px;
+    }
+
+    .slider-subtitle {
+        display: block;
     }
 }
 
@@ -484,6 +633,24 @@ body a:hover {
 
     .event-single-header-right {
         flex: 1;
+    }
+    .home_slider_carousel_item {
+        height: 200px !important;
+        width: auto !important;
+    }
+
+    #home_slider_carousel {
+        margin-top: -70px;
+    }
+
+    .home_slider_fullscreen_content {
+        position: absolute;
+        top: 80px;
+    }
+
+    .fullscreen_slider_image {
+        max-height: 560px;
+        max-width: 100%;
     }
 }
 
