--- a/public/css/style.css
+++ b/public/css/style.css
@@ -488,6 +488,40 @@ body a:hover {
     margin-bottom: 15px;
 
 }
+.mego-img-thumbnail {
+    width: 48px;
+    height: 53px;
+}
+
+.mego-td-control {
+    margin-top: 12px;
+    margin-left: -10px;
+
+    }
+/* contact us */
+.mego-hero-image {
+    background-image: url(https://bona.com.sg/wp-content/uploads/2019/04/bg-image-12-1920x238.png);
+    background-color: #cccccc;
+    height: 130px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.mego-hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+
+.mego-txt-line-height p {
+    margin-bottom: 2px;
+    line-height: 1.5;
+}
 /* footer */
 .mego-logo-footer{
     max-height: 100%;
