--- a/public/css/style.css
+++ b/public/css/style.css
@@ -497,7 +497,108 @@ body a:hover {
     margin-top: 12px;
     margin-left: -10px;
 
-    }
+}
+.mego-img-thumbnail-show {
+    width: 70px;
+    height: auto;
+}
+/* profile */
+.mego-avatar-wrapper,
+.mego-company-wrapper {
+    position: relative;
+    height: 100px;
+    width: 100px;
+    margin: 50px auto;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: 1px 1px 1px -5px black;
+    transition: all .3s ease;
+    border: 1px solid #7c7676;
+}
+
+.mego-avatar-wrapper:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
+.mego-company-wrapper:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
+.mego-avatar-wrapper:hover .profile-pic {
+    opacity: .5;
+}
+
+.mego-company-wrapper:hover #preview-logo-pic {
+    opacity: .5;
+}
+
+.mego-avatar-wrapper .profile-pic {
+    height: 100%;
+    width: 100%;
+    transition: all .3s ease;
+
+}
+
+.mego-company-wrapper #preview-logo-pic {
+    height: 100%;
+    width: 100%;
+    transition: all .3s ease;
+
+}
+
+.mego-avatar-wrapper .profile-pic:after {
+    /* font-family: FontAwesome; */
+    content: "\f007";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    font-size: 100px;
+    background: #ecf0f1;
+    color: #34495e;
+    text-align: center;
+}
+
+.mego-company-wrapper #preview-logo-pic:after {
+    font-family: FontAwesome;
+    content: "\f007";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    font-size: 100px;
+    background: #ecf0f1;
+    color: #34495e;
+    text-align: center;
+}
+
+.mego-avatar-wrapper .upload-button {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+
+}
+
+.mego-company-wrapper .logo-upload-button {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+}
+#mego-text-small small {
+    font-size: 16px;
+}
+
+#mego-text-small a:hover {
+    color: #bf9000;
+}
 /* contact us */
 .mego-hero-image {
     background-image: url(https://bona.com.sg/wp-content/uploads/2019/04/bg-image-12-1920x238.png);
