--- a/public/css/style.css
+++ b/public/css/style.css
@@ -213,7 +213,27 @@ body a:hover {
     background: #C5B358;
     color: white;
 }
+td .mego-btn {
+    border: 1px solid #C5B358;
+    ;
+    border-radius: 0.2rem;
+    background-color: white;
+    color: black;
+    padding: 0.25rem 0.5rem;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+}
 
+.mego-outline-gold {
+    border-color: #C5B358;
+    color: #C5B358;
+}
+
+.mego-outline-gold:hover {
+    background: #C5B358;
+    color: white;
+}
 #h1,
 #h3 {
     color: #C5B358;
