--- a/public/css/style.css
+++ b/public/css/style.css
@@ -416,7 +416,7 @@ td .mego-btn {
     background-color: #02020242;
     margin-left: 60px;
 }
-.home_slider_fullscreen_content h1,h3 {
+.home_slider_fullscreen_content h1 {
     width: 40vw;
     margin-left: 60px;
     padding: 15px;
