--- a/public/css/style.css
+++ b/public/css/style.css
@@ -213,6 +213,7 @@ body a:hover {
     background: #C5B358;
     color: white;
 }
+
 td .mego-btn {
     border: 1px solid #C5B358;
     ;
@@ -234,6 +235,7 @@ td .mego-btn {
     background: #C5B358;
     color: white;
 }
+
 #h1,
 #h3 {
     color: #C5B358;
@@ -411,8 +413,9 @@ td .mego-btn {
 .event-single-page .btn-danger {
     border-radius: 4px;
 }
+
 /* slider */
-.home_slider_fullscreen_content{
+.home_slider_fullscreen_content {
     max-width: 600px;
     padding: 15px;
     background-color: #02020242;
@@ -426,7 +429,7 @@ td .mego-btn {
 
 .home_slider_fullscreen .slick-prev {
     margin-left: 40px !important;
-    
+
     z-index: 1;
 }
 
@@ -443,6 +446,7 @@ td .mego-btn {
 .home_slider_carousel .slick-next {
     margin-right: 50px !important;
 }
+
 .slick-lightbox-slick-item-inner,
 .slick-lightbox-slick-img {
     max-height: auto !important;
@@ -470,8 +474,9 @@ td .mego-btn {
     font-size: 25px;
     color: black;
 }
+
 /* product */
- .mego-card-horizontal {
+.mego-card-horizontal {
     display: flex;
     flex: 1 1 auto;
 }
@@ -508,6 +513,7 @@ td .mego-btn {
     margin-bottom: 15px;
 
 }
+
 .mego-img-thumbnail {
     width: 48px;
     height: 53px;
@@ -518,10 +524,22 @@ td .mego-btn {
     margin-left: -10px;
 
 }
+
 .mego-img-thumbnail-show {
     width: 70px;
     height: auto;
 }
+
+.mego-event-layout-image img {
+    width: 80px;
+    height: 80px;
+}
+
+.mego-event-create-image img {
+    width: 150px;
+    height: 150px;
+}
+
 /* profile */
 .mego-avatar-wrapper,
 .mego-company-wrapper {
@@ -612,6 +630,7 @@ td .mego-btn {
     height: 100%;
     width: 100%;
 }
+
 #mego-text-small small {
     font-size: 16px;
 }
@@ -619,6 +638,7 @@ td .mego-btn {
 #mego-text-small a:hover {
     color: #bf9000;
 }
+
 /* contact us */
 .mego-hero-image {
     background-image: url(https://bona.com.sg/wp-content/uploads/2019/04/bg-image-12-1920x238.png);
@@ -644,11 +664,12 @@ td .mego-btn {
     line-height: 1.5;
 }
 
-.mego-logo-footer{
+.mego-logo-footer {
     max-height: 100%;
     max-width: 100%;
 }
-.mego-logo-footer img{
+
+.mego-logo-footer img {
     max-width: 200px;
     width: 100%;
 }
@@ -656,7 +677,7 @@ td .mego-btn {
 .max-line-3 {
     display: -webkit-box !important;
     -webkit-line-clamp: 3 !important;
-    -webkit-box-orient: vertical !important;  
+    -webkit-box-orient: vertical !important;
     overflow: hidden !important;
 }
 
@@ -709,6 +730,7 @@ td .mego-btn {
         justify-content: space-between;
         width: 100%;
     }
+
     /* slider */
     .home_slider_fullscreen_content h1 {
         font-size: 6vw;
@@ -755,6 +777,7 @@ td .mego-btn {
         max-width: 170px;
         width: 100%;
     }
+
     /* slider */
     .home_slider_carousel_item {
         height: 80px !important;
@@ -791,6 +814,7 @@ td .mego-btn {
         position: relative;
         display: flex;
     }
+
     /* slider */
     .home_slider_carousel_item {
         height: 200px !important;
@@ -843,6 +867,7 @@ td .mego-btn {
     .event-single-header-right {
         flex: 1;
     }
+
     .home_slider_carousel_item {
         height: 200px !important;
         width: auto !important;
