--- a/public/css/style.css
+++ b/public/css/style.css
@@ -659,6 +659,11 @@ td .mego-btn {
     -webkit-box-orient: vertical !important;
     overflow: hidden !important;
 }
+img {
+   max-width: 100%; 
+   height: auto;
+}
+
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
