--- a/public/css/style.css
+++ b/public/css/style.css
@@ -119,8 +119,8 @@ body a:hover {
     width: auto;
     height: auto;
     max-width: 100%;
-    border-bottom: none;
-    z-index: 1111;
+    z-index: 11111;
+    top: 60px;
 }
 
 .dropdown .dropdown-content li {
@@ -715,9 +715,7 @@ img {
         width: auto;
         height: auto;
         max-width: 100%;
-        max-height: 100%;
-        border-bottom: none;
-        z-index: 1111;
+        z-index: 11111;
     }
     .event-single-header {
         display: flex;
