--- a/public/css/style.css
+++ b/public/css/style.css
@@ -113,83 +113,83 @@
 #top-navigation .navbar-nav li a:hover::before {
     width: 100%;
 }
-  #top-navigation .popup-box-on {
-        display: block !important;
-    }
+#top-navigation .popup-box-on {
+    display: block !important;
+}
 
-    #top-navigation .off {
-        display: none;
-    }
+#top-navigation .off {
+    display: none;
+}
 
-    #top-navigation .chat_box .chat_message_wrapper ul.chat_message>li+li {
-        margin-top: 4px;
-    }
+#top-navigation .chat_box .chat_message_wrapper ul.chat_message>li+li {
+    margin-top: 4px;
+}
 
-    #top-navigation #search.open {
-        opacity: 1;
-        transform: translate(0px, 0px) scale(1, 1);
-    }
+#top-navigation #search.open {
+    opacity: 1;
+    transform: translate(0px, 0px) scale(1, 1);
+}
 
-    #top-navigation #search {
-        background-color: #fff;
-        height: 100%;
-        left: 0;
-        position: fixed;
-        top: 0;
-        transition: all 0.5s ease-in-out 0s;
-        width: 100%;
-        z-index: 2000;
+#top-navigation #search {
+    background-color: #fff;
+    height: 100%;
+    left: 0;
+    position: fixed;
+    top: 0;
+    transition: all 0.5s ease-in-out 0s;
+    width: 100%;
+    z-index: 2000;
 
-    }
+}
 
-    #top-navigation #search .close {
-        color: #be5254;
-        font-size: 40px;
-        opacity: 1;
-        padding: 10px 17px;
-        position: fixed;
-        right: 15px;
-        top: 15px;
-    }
+#top-navigation #search .close {
+    color: #be5254;
+    font-size: 40px;
+    opacity: 1;
+    padding: 10px 17px;
+    position: fixed;
+    right: 15px;
+    top: 15px;
+}
 
-    #top-navigation button.close {
-        background: transparent none repeat scroll 0 0;
-        border: 0 none;
-        cursor: pointer;
-    }
+#top-navigation button.close {
+    background: transparent none repeat scroll 0 0;
+    border: 0 none;
+    cursor: pointer;
+}
 
-    #top-navigation .close {
-        float: right;
-        font-weight: bold;
-        line-height: 1;
-        text-shadow: 0 1px 0 #fff;
-    }
+#top-navigation .close {
+    float: right;
+    font-weight: bold;
+    line-height: 1;
+    text-shadow: 0 1px 0 #fff;
+}
 
-    #top-navigation #search input[type="text"] {
-        background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-        border: 0 none;
-        color: #333;
-        font-family: "Open Sans", sans-serif;
-        font-size: 50px;
-        font-weight: 300;
-        margin: -51px auto 0;
-        outline: medium none;
-        padding-left: 30px;
-        padding-right: 30px;
-        position: absolute;
-        text-align: center;
-        top: 50%;
-        width: 100%;
-    }
+#top-navigation #search input[type="text"] {
+    background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+    border: 0 none;
+    color: #333;
+    font-family: "Open Sans", sans-serif;
+    font-size: 50px;
+    font-weight: 300;
+    margin: -51px auto 0;
+    outline: medium none;
+    padding-left: 30px;
+    padding-right: 30px;
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    width: 100%;
+}
 
-    #top-navigation #search .btn {
-        left: 50%;
-        margin-top: 60px;
-        padding: 10px 50px;
-        position: absolute;
-        top: 50%;
-        transform: translateX(-50%);
-    }
+#top-navigation #search .btn {
+    left: 50%;
+    margin-top: 60px;
+    padding: 10px 50px;
+    position: absolute;
+    top: 50%;
+    transform: translateX(-50%);
+}
 /* .dropdown-menu {
             z-index: 1;
         } */
@@ -901,7 +901,14 @@ img {
         align-items: center !important;
         margin: auto !important;
     }
-
+    /* search bar */
+    #top-navigation #search input[type="text"] {
+        font-size: 25px;
+        padding: 10px;
+    }
+    #top-navigation #search .btn {
+        margin-top: 30px;
+    }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
